--- a/open_food_api/requirements.txt
+++ b/open_food_api/requirements.txt
@@ -1,2 +1,5 @@
 Django==4.1.4
-djangorestframework==3.12.4
+djangorestframework==3.14.0
+djangorestframework_simplejwt==5.2.2
+pymongo==3.12.3
+requests==2.28.1
